--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -499,14 +499,14 @@ header {
 .section-title {
     font-size: 2.25vw;
     color: color(curiosBlue);
-    -webkit-text-stroke: 1px color(mirage);
+    //-webkit-text-stroke: 1px color(mirage);
     font-weight: bold;
     text-align: center;
 }
 
-.featured-bg, .reviews {
+#featured-tutors, .reviews {
     background-color: color(concrete);
-    margin: 4vw 2vw 0;
+    margin: 2vw 2vw;
 }
 
 .reviews {
@@ -516,28 +516,35 @@ header {
     margin: 0 7%;
 }
 
+#featured {
+    margin: 0 9%;
+}
+
+#featured-row {
+    display: flex;
+    align-items: center;
+}
+
 .review {
+    width: 50%;
+    .stars {
+        margin: 1.5vw 0;
+    }
+}
+
+#featured-tutors {
     width: 50%;
 }
 
-.featured, .review {
-    padding: 2vw;
+.featured-tutor, .review {
+    padding: 1.5vw 2vw;
 
-    .featured-tutor, .reviewer {
-        color: color(mirage);
+    .tutor-name, .reviewer {
         font-weight: 600;
         font-size: 1.25vw;
     }
 
-    .tutor-description {
-        color: color(mirage74);
-        margin-top: 1.25vw;
-        font-size: 1.75vw;
-        font-weight: 600;
-    }
-
     .stars {
-        margin: 1.5vw 0;
         display: flex;
 
         .gold span svg {
@@ -560,16 +567,48 @@ header {
         font-weight: 300;
 
         div {
-            margin-bottom: 4vw;
+            margin-bottom: 1vw;
         }
+    }
+}
+
+.featured-tutor {
+    .tutor-description {
+        color: color(mirage74);
+        max-width: 50%;
+        text-align: right;
+        font-size: 1.0125vw;
+        font-weight: 600;
+    }
+
+    .tutor-name {
+        display: block;
+        white-space: nowrap;
     }
 
     .areas {
         background: color(mercury);
         padding: 10px;
         color: color(mirage);
-        font-size: 3.5vw;
+        font-size: 1.0125vw;
         font-weight: 300;
         display: block;
     }
+
+    .areas:hover {
+        transform: scale(1.1);
+    }
+
+    .bottom, .top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .top {
+        margin-bottom: 1vw;
+    }
+}
+
+.featured-tutor:nth-child(1) {
+    margin-bottom: 2vw;
 }
