[start #170866479] add landing styling

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -87,6 +87,7 @@ main {
     margin-top: $navBarHeight;
     padding-top: .5rem;
     display: block;
+    background-color: color(alabaster);
 }
 
 .info {
