--- a/src/styles/nav-bar.scss
+++ b/src/styles/nav-bar.scss
@@ -46,6 +46,7 @@ $desktop: 800px;
     flex-direction: row;
     justify-content: space-around;
     z-index: 50;
+    box-shadow: 0 2px 4px rgba(27, 37, 49, 0.25);
 
     .logo {
         display: inline-block; // can't apply max width without inline-block or block
