[ft #170866479] add services section

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -119,10 +119,10 @@ main {
     background-color: color(gallery);
 }
 
-.team-image:hover, .card-image:hover {
+/*.team-image:hover, .card-image:hover {
     transform: scale(1.1);
     transition: all 1s ease-in-out;
-}
+}*/
 
 .btn-link {
     -webkit-border-radius: $webkitRadius;
