[ft #170866479] update mobile responsive queries

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -148,3 +148,8 @@ main {
 .client-btn:hover, .tutor-btn:hover {
     border-width: 2px;
 }
+
+.services {
+    padding: .7rem 1.5rem;
+    font-size: 1.25rem;
+}
