--- a/src/styles/side-bar.scss
+++ b/src/styles/side-bar.scss
@@ -44,7 +44,7 @@ $navBarHeight: 3.5em;
 
     .menu-item {
         color: color(mirage);
-        //padding: 20px 15px;
+        padding: 20px 15px;
         width: 100%;
         cursor: pointer;
         font-weight: 300;
