--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -78,7 +78,7 @@ $monitor: 1192px;
     width: 70%;
     hr {
         width: 70px;
-        border: 2px solid #C656D8;
+        border: 2px solid #27A1DA;
         margin-left: 0;
     }
     margin: 6rem auto;
@@ -103,7 +103,7 @@ $monitor: 1192px;
 }
 
 .service::after {
-    background: #C656D8;
+    background: #27A1DA;
     border-radius: 5px;
     content: "";
     display: block;
