--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -51,10 +51,30 @@ $desktop: 800px;
     }
 
     .benefit {
+        position: relative;
         @include desktop {
-            width: 33%;
+            width: 31%;
+            margin: 0 auto 3vw;
         }
         padding: 0 2vw;
+        border: 1px solid #C4C4C4;
+        box-sizing: border-box;
+        box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 5px;
+    }
+
+    .benefit::after {
+        background: #27A1DA;
+        border-radius: 5px 5px 0 0;
+        content: "";
+        display: block;
+        max-height: 3vw;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 5%;
+        z-index: 50;
     }
 
     .title {
