--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -54,6 +54,7 @@ $desktop: 800px;
     padding: 2vw;
     text-align: center;
     background: rgba(255, 255, 255, 0.63);
+    color: color(deepSeaGreen);
 
     h2 {
         text-transform: uppercase;
