--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -31,7 +31,7 @@ $desktop: 800px;
 
 
 #welcome {
-    background-color: color(white);
+    background-color: color(alabaster);
     padding: 6vw;
     margin-top: 3rem;
 
