[ft #170866479] add mobile responsiveness to reviews

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -97,14 +97,17 @@ main {
 .section-title {
     text-transform: uppercase;
     font-size: 5vw;
+    text-align: center;
 
     @include desktop {
         margin-left: 6vw;
         font-size: 2.25vw;
+        text-align: left;
     }
 
     @include monitor {
         font-size: 2.5vw;
+        text-align: left;
     }
 }
 
@@ -143,13 +146,13 @@ main {
 }
 
 .services {
-    padding: .7rem 1.5rem;
+    padding: .5rem 1.5rem;
     font-size: 1.25rem;
 }
 
 #how-teecha-works {
     background-color: color(alabaster);
-    padding: 3vw 5vw;
+    padding: 3vw 5vw 7vw;
 }
 
 .how-icon {
