[ft #170866479] add google audit fixes

--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -33,7 +33,7 @@ $desktop: 800px;
 #welcome {
     background-color: color(alabaster);
     padding: 6vw;
-    margin-top: 3rem;
+    //margin-top: 3rem;
 
     .sell, #emphasis {
         text-align: center;
