--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -136,8 +136,8 @@ main {
 .client-btn, .tutor-btn {
     padding: .45rem 1.2rem;
     margin: .5vw 2vw 1.25vw;
-    border-width: 1px;
-    font-size: .9em;
+    border-width: 2px;
+    font-size: 1em;
 }
 
 .client-btn:hover, .tutor-btn:hover {
