--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -31,8 +31,8 @@ $desktop: 800px;
 
 .slide-container {
     display: flex;
-    padding: 4vw;
-    background-image: url("../images/background.jpg");
+    padding: 5vw 4vw;
+    background-image: url("../images/landing.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -53,7 +53,6 @@ $desktop: 800px;
     align-items: center;
     padding: 2vw;
     text-align: center;
-    background: rgba(255, 255, 255, 0.63);
     color: color(deepSeaGreen);
 
     h2 {
@@ -68,10 +67,10 @@ $desktop: 800px;
     }
 
     #dark-box {
-        background-color: #F4F4F4;
-        padding: 0 3vw 1vw;
+        background-color: color(alabaster);
+        padding: 0 3vw 2vw;
         border-radius: 5px;
-        border: 1px solid color(silver);
+        border: 1px solid color(mercury);
 
         .services {
             background-color: color(curiosBlue);
