[ft #170866479] update slide image

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -32,7 +32,7 @@ $desktop: 800px;
 .slide-container {
     display: flex;
     padding: 5vw 4vw;
-    background-image: url("../images/landing.jpg");
+    background-image: url("../assets/images/landing.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
