--- a/src/styles/nav-bar.scss
+++ b/src/styles/nav-bar.scss
@@ -45,8 +45,12 @@ $desktop: 800px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     z-index: 50;
     box-shadow: 0 2px 4px rgba(27, 37, 49, 0.25);
+    @include desktop {
+        align-items: unset;
+    }
 
     .logo {
         display: inline-block; // can't apply max width without inline-block or block
@@ -61,12 +65,17 @@ $desktop: 800px;
     button {
         -webkit-border-radius: $webkitRadius;
         border-radius: $borderRadius;
-        background-color: color(alabaster);
-        color: color(purple);
+        background-color: color(white);
+        color: color(curiosBlue);
         border-width: 1px;
         border-style: solid;
-        border-color: color(purple);
-        padding: .5em 1.5em;
+        border-color: color(curiosBlue);
+        @include desktop {
+            border-width: 2px;
+            font-weight: 600;
+            padding: .5em 1.5em;
+        }
+        padding: .4em 1.5em;
         cursor: $pointer;
         font-size: $font16;
         margin: 8px 0;
@@ -126,6 +135,16 @@ $desktop: 800px;
     }
 
     .toggle {
+        @include desktop {
+            display: none;
+        }
+    }
+
+    .toggle {
+        display: flex;
+        justify-content: flex-end;
+        width: 50px;
+        padding: 0 3vw;
         @include desktop {
             display: none;
         }
