--- a/src/styles/welcome.scss
+++ b/src/styles/welcome.scss
@@ -31,7 +31,7 @@ $desktop: 800px;
 
 
 #welcome {
-    background-color: color(alabaster);
+    background-color: #EEEEEE;
     padding: 6vw;
     //margin-top: 3rem;
 
@@ -62,6 +62,7 @@ $desktop: 800px;
         box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 5px;
         margin-bottom: 4vw;
+        background-color: #ffffff;
     }
 
     .benefit:hover {
