--- a/src/styles/nav-bar.scss
+++ b/src/styles/nav-bar.scss
@@ -82,7 +82,9 @@ $desktop: 800px;
     }
 
     button:hover {
-        background-color: color(white);
+        background-color: color(curiosBlue);
+        color: color(white);
+        transition: all .5s ease-in-out;
     }
 
     .toggle span{
