[ft #170866479] update service resource and style

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -163,6 +163,7 @@ main {
 .services {
     padding: .5rem 1.5rem;
     font-size: 1.25rem;
+    box-shadow: 0 4px 4px rgba(27, 37, 49, 0.25);
 }
 
 #how-teecha-works {
