--- a/src/styles/nav-bar.scss
+++ b/src/styles/nav-bar.scss
@@ -34,6 +34,14 @@ $desktop: 800px;
     }
 }
 
+$menu: 900px;
+
+@mixin menu {
+    @media (min-width: #{$menu}) {
+        @content;
+    }
+}
+
 #nav-bar {
     background-color: color(alabaster);
     height: $navBarHeight;
@@ -63,28 +71,8 @@ $desktop: 800px;
     }
 
     button {
-        -webkit-border-radius: $webkitRadius;
-        border-radius: $borderRadius;
-        background-color: color(white);
-        color: color(curiosBlue);
-        border-width: 1px;
-        border-style: solid;
-        border-color: color(curiosBlue);
-        @include desktop {
-            border-width: 2px;
-            font-weight: 600;
-            padding: .5em 1.5em;
-        }
-        padding: .4em 1.5em;
-        cursor: $pointer;
-        font-size: $font16;
-        margin: 8px 0;
-    }
-
-    button:hover {
-        background-color: color(curiosBlue);
+        background-color: #0071A5;
         color: color(white);
-        transition: all .5s ease-in-out;
     }
 
     .toggle span{
@@ -145,16 +133,41 @@ $desktop: 800px;
     .toggle {
         display: flex;
         justify-content: flex-end;
-        width: 50px;
-        padding: 0 3vw;
+        width: 6vh;
+        line-height: 15px;
+        padding: 0 8px 0 0;
         @include desktop {
             display: none;
         }
+        span svg{
+            cursor: $pointer;
+        }
     }
 
-    .toggle span svg{
-        cursor: $pointer;
+    .pulse {
+        background-color: #EEEEEE;
+        border-radius: 50%;
+        transform: scale(1);
+        animation: pulse 2s infinite;
     }
+
+    @keyframes pulse {
+        0% {
+            transform: scale(0.95);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.3);
+        }
+
+        70% {
+            transform: scale(1);
+            box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+        }
+
+        100% {
+            transform: scale(0.95);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        }
+    }
+
     .toggle span svg:hover {
         transform: scale(1.1);
     }
