--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -73,8 +73,11 @@ $desktop: 800px;
         border: 1px solid color(mercury);
 
         .services {
-            background-color: color(curiosBlue);
+            //background-color: color(curiosBlue);
+            //color: color(white);
+            background-color: #0071A5;
             color: color(white);
+            border-color: #0071A5;
 
             @include desktop {
                 padding: 1vw 3vw;
