[ft #170866479] update services button style

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -196,6 +196,10 @@ button {
         box-shadow: 0 4px 4px rgba(27, 37, 49, 0.25);
         text-decoration: none;
     }
+    background-color: #27A1DA;
+    color: #FFFFFF;
+    border-color: #27A1DA;
+    box-shadow: 0 4px 4px rgba(27, 37, 49, 0.25);
 }
 
 #how-teecha-works {
