--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -37,12 +37,28 @@ $monitor: 1192px;
 }
 
 footer {
+    a {
+        font-size: 1.125rem;
+    }
     #lighter {
         background-color: color(alabaster);
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
         padding: 2vw 3vw;
+
+        .col {
+            margin-bottom: 6vw;
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            @include desktop {
+                width: 33%;
+                margin-bottom: 0;
+            }
+        }
 
         #company-info {
             text-align: center;
@@ -56,25 +72,12 @@ footer {
             align-items: normal;
         }
 
-        #contacts-title, #find-us-title {
+        .footer-title {
             color: color(mirage64);
             text-align: center;
             font-size: 1.5rem;
             margin: 1vw 0 1vw;
             font-weight: 300;
-        }
-
-        .col {
-            margin-bottom: 6vw;
-            width: 80%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            @include desktop {
-                width: 33%;
-                margin-bottom: 0;
-            }
         }
 
         p {
@@ -105,7 +108,6 @@ footer {
         font-weight: 300;
 
         a {
-            font-size: 1.125rem;
             margin-right: 25px;
         }
 
