--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -78,6 +78,10 @@ $desktop: 800px;
             border-color: #0071A5;
             box-shadow: none;
 
+            &:hover {
+                box-shadow: 0 4px 4px rgba(27, 37, 49, 0.25);
+            }
+
             @include desktop {
                 padding: 1vw 3vw;
                 font-size: 2vw;
